Alignment fix

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 
 .container {
   display: flex;
-  align-items: stretch;
+  align-items: center;
   /* display: flex; align-items: center; padding: 10px 0px */
 }
 
